@@ -39,6 +39,7 @@ AgsIpatchSample* ags_sf2_synth_util_midi_locale_find_sample_near_midi_key(AgsIpa
 									  gchar **sample);
 
 void ags_sf2_synth_util_copy_s8(gint8 *buffer,
+				guint buffer_size,
 				AgsIpatchSample *ipatch_sample,
 				gdouble note,
 				gdouble volume,
@@ -47,6 +48,7 @@ void ags_sf2_synth_util_copy_s8(gint8 *buffer,
 				gboolean do_loop,
 				gint loop_start, gint loop_end);
 void ags_sf2_synth_util_copy_s16(gint16 *buffer,
+				 guint buffer_size,
 				 AgsIpatchSample *ipatch_sample,
 				 gdouble note,
 				 gdouble volume,
@@ -55,6 +57,7 @@ void ags_sf2_synth_util_copy_s16(gint16 *buffer,
 				 gboolean do_loop,
 				 gint loop_start, gint loop_end);
 void ags_sf2_synth_util_copy_s24(gint32 *buffer,
+				 guint buffer_size,
 				 AgsIpatchSample *ipatch_sample,
 				 gdouble note,
 				 gdouble volume,
@@ -63,6 +66,7 @@ void ags_sf2_synth_util_copy_s24(gint32 *buffer,
 				 gboolean do_loop,
 				 gint loop_start, gint loop_end);
 void ags_sf2_synth_util_copy_s32(gint32 *buffer,
+				 guint buffer_size,
 				 AgsIpatchSample *ipatch_sample,
 				 gdouble note,
 				 gdouble volume,
@@ -71,6 +75,7 @@ void ags_sf2_synth_util_copy_s32(gint32 *buffer,
 				 gboolean do_loop,
 				 gint loop_start, gint loop_end);
 void ags_sf2_synth_util_copy_s64(gint64 *buffer,
+				 guint buffer_size,
 				 AgsIpatchSample *ipatch_sample,
 				 gdouble note,
 				 gdouble volume,
@@ -79,6 +84,7 @@ void ags_sf2_synth_util_copy_s64(gint64 *buffer,
 				 gboolean do_loop,
 				 gint loop_start, gint loop_end);
 void ags_sf2_synth_util_copy_float(gfloat *buffer,
+				   guint buffer_size,
 				   AgsIpatchSample *ipatch_sample,
 				   gdouble note,
 				   gdouble volume,
@@ -87,6 +93,7 @@ void ags_sf2_synth_util_copy_float(gfloat *buffer,
 				   gboolean do_loop,
 				   gint loop_start, gint loop_end);
 void ags_sf2_synth_util_copy_double(gdouble *buffer,
+				    guint buffer_size,
 				    AgsIpatchSample *ipatch_sample,
 				    gdouble note,
 				    gdouble volume,
@@ -95,6 +102,7 @@ void ags_sf2_synth_util_copy_double(gdouble *buffer,
 				    gboolean do_loop,
 				    gint loop_start, gint loop_end);
 void ags_sf2_synth_util_copy_complex(AgsComplex *buffer,
+				     guint buffer_size,
 				     AgsIpatchSample *ipatch_sample,
 				     gdouble note,
 				     gdouble volume,
