@@ -5,6 +5,8 @@ ags (3.4.0)
 	* TODO:JK: implemented AgsSFZSynth
 	* TODO:JK: implemented AgsSF2Generator
 	* TODO:JK: implemented AgsSFZGenerator
+	* TODO:JK: implemented ags_sf2_synth_util.c
+	* TODO:JK: implemented ags_sfz_synth_util.c
 	* improved ags_filter_util.c
 	* improved AgsComplex support
 
